Fixed minor JS error, then checked functionality, updated color of <p> & <h2> for readability on the result displays. Completed.

--- a/100-projects-054-recipe-finder2.css
+++ b/100-projects-054-recipe-finder2.css
@@ -71,10 +71,12 @@ button:hover {
 .recipe h2 {
     font-size: 1.5em;
     margin-bottom: 10px;
+    color: #226666;
 }
 
 .recipe p {
     margin-bottom: 5px;
+    color: #226666;
 }
 
 .recipe img {
